--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>
   {{title}}
 </h1>
+<div>
+
+  <input type="file" name="file" id="file" class="inputfile" (change)="onChange($event)"/>
+<label for="file" >Choose a file</label>
+</div>
