I'm awesome, I fixed it, bind two function to one click:onChange andon onClick, onChange do the read, onClick clean the target so that same input could triger change again and again

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
 </h1>
 <div>
 
-  <input type="file" name="file" id="file" class="inputfile" (change)="onChange($event)"/>
-<label for="file" >Choose a file</label>
+  <input type="file" name="file" id="file" class="inputfile" (change)="onChange($event)" (click)="onClick($event)"/>
+  <label for="file">Choose a file</label>
+<!--
+  <input type="file" name="file" id="file" class="inputfile" (change)="triggerFile($event.target)" />
+  <label for="file">Choose a file</label> -->
 </div>
