--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,30 +1,34 @@
 .inputfile {
-	width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
-.inputfile + label {
-    font-size: 1.25em;
-    font-weight: 700;
-    color: white;
-    background-color: black;
-    display: inline-block;
+.inputfile+label {
+  font-size: 12px;
+  font-weight: 500;
+  color: white;
+  background-color: #44c4e7;
+  display: inline-block;
+  /*padding-top: 20px;*/
+  height: 30px;
+	margin-top: 20px;
+	  vertical-align: middle;
 }
 
-.inputfile:focus + label,
-.inputfile + label:hover {
-    background-color: red;
+.inputfile:focus+label, .inputfile+label:hover {
+  background-color: red;
 }
 
-.inputfile + label {
-	cursor: pointer; /* "hand" cursor */
+.inputfile+label {
+  cursor: pointer;
+  /* "hand" cursor */
 }
 
-.inputfile:focus + label {
-	outline: 1px dotted #000;
-	outline: -webkit-focus-ring-color auto 5px;
+.inputfile:focus+label {
+  outline: 1px dotted #000;
+  outline: -webkit-focus-ring-color auto 5px;
 }
